// See README.txt for information and build instructions.

package ssl;

message Robot {
  message Position {
    required float x = 1 [default = 0.0];
    required float y = 2 [default = 0.0];
  }

  enum Action {
    MOVE = 0;
    PASS = 1;
    KICK = 2;
  }

  message Move {
    required Position target = 1;
  }

  message Pass {
    required int32 robot_id = 1;
  }

  message Kick {
    required Position target = 1;
  }

  required Position position = 1;
  optional Action action = 2 [default = MOVE];
  optional Move move = 3;
  optional Pass pass = 4;
  optional Kick kick = 5;
}

message Team {
  repeated Robot robot = 2;
}
